--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -49,7 +49,10 @@ jobs:
         id: plan
         run: |-
           terraform plan \
-          -var="region=us-east-1" \
+          -var="region=$TF_VAR_REGION" \
+          -var="bucket_key=$TF_VAR_BUCKET_KEY" \
+          -var="bucket_name=$TF_VAR_BUCKET_NAME" \
+          -var="dynamodb_table=$TF_VAR_DYNAMODB_TABLE" \
           -var="public_key=$AWS_SSH_KEY_PUBLIC" \
           -var="private_key=$AWS_SSH_KEY_PRIVATE" \
           -var="key_name=app_auth" \
