--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -12,7 +12,7 @@ on:
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_REGION: ${{ secrets.TF_VAR_REGION }}
   TF_VAR_BUCKET_NAME: ${{ secrets.TF_VAR_BUCKET_NAME }}
   TF_VAR_DYNAMODB_TABLE: ${{ secrets.TF_VAR_DYNAMODB_TABLE }}
@@ -75,16 +75,15 @@ jobs:
       - name: Set ip env variable
         run: echo SERVER_PUBLIC_IP=${{ needs.terraform.outputs.SERVER_PUBLIC_IP }} >> $GITHUB_ENV
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::333410513408:instance-profile/ec2-ecr-auth
+          aws-region: us-east-1
+
       - name: Login to AWS ECR
         id: ecr-login
-        uses: aws-actions/amazon-ecr-loging@v1
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+        uses: aws-actions/amazon-ecr-loging@v2
 
       - name: Build and push docker image
         env:
