--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -93,7 +93,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ./website
+          context: .
           file: Dockerfile
           push: true
           tags: lyndaaaudrey/website-repo:${{ github.sha }}
