--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -10,16 +10,6 @@ on:
     branches:
       - main
 
-env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  TF_VAR_REGION: ${{ secrets.TF_VAR_REGION }}
-  TF_VAR_BUCKET_NAME: ${{ secrets.TF_VAR_BUCKET_NAME }}
-  TF_VAR_DYNAMODB_TABLE: ${{ secrets.TF_VAR_DYNAMODB_TABLE }}
-  TF_VAR_BUCKET_KEY: ${{ secrets.TF_VAR_BUCKET_KEY }}
-  AWS_SSH_KEY_PRIVATE: ${{ secrets.AWS_SSH_KEY_PRIVATE }}
-  AWS_SSH_KEY_PUBLIC: ${{ secrets.AWS_SSH_KEY_PUBLIC }}
-
 jobs:
   terraform:
     name: Deploy infrastructure
@@ -101,9 +91,9 @@ jobs:
       - name: Deploy docker image to EC2
         uses: appleboy/ssh-action@master
         with:
-          hosts: ${{ env.SERVER_PUBLIC_IP }}
+          hosts: ${{ secrets.EC2_HOST }}
           username: ubuntu
-          key: ${{ env.SSH_PRVIVATE }}
+          key: ${{ env.SSH_PRIVATE }}
           script: |
             sudo apt update
             sudo apt install docker.io -y
