--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -10,6 +10,16 @@ on:
     branches:
       - main
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_VAR_REGION: ${{ secrets.TF_VAR_REGION }}
+  TF_VAR_BUCKET_NAME: ${{ secrets.TF_VAR_BUCKET_NAME }}
+  TF_VAR_DYNAMODB_TABLE: ${{ secrets.TF_VAR_DYNAMODB_TABLE }}
+  TF_VAR_BUCKET_KEY: ${{ secrets.TF_VAR_BUCKET_KEY }}
+  AWS_SSH_KEY_PRIVATE: ${{ secrets.AWS_SSH_KEY_PRIVATE }}
+  AWS_SSH_KEY_PUBLIC: ${{ secrets.AWS_SSH_KEY_PUBLIC }}
+
 jobs:
   terraform:
     name: Deploy infrastructure
@@ -32,7 +42,7 @@ jobs:
 
       - name: Terraform init
         id: init
-        run: terraform init
+        run: terraform init -backend-config="bucket=$TF_VAR_BUCKET_NAME" -backend-config="dynamodb_table=$TF_VAR_DYNAMODB_TABLE" -backend-config="region=$TF_VAR_REGION"
         working-directory: ./terraform
 
       - name: Terraform validate
@@ -93,7 +103,7 @@ jobs:
         with:
           hosts: ${{ secrets.EC2_HOST }}
           username: ubuntu
-          key: ${{ env.SSH_PRIVATE }}
+          key: ${{ env.SSH_PRVIVATE }}
           script: |
             sudo apt update
             sudo apt install docker.io -y
