--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -28,6 +28,7 @@ jobs:
       SERVER_PUBLIC_IP: ${{ steps.set-ip.outputs.instance_public_ip}}
       SSH_PRVIVATE: ${{ steps.set-ssh-private.outputs.ssh_private }}
 
+    needs: website
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -73,7 +74,6 @@ jobs:
     name: Deploy application
     runs-on: ubuntu-latest
 
-    needs: terraform
     steps:
       - name: Checkout
         uses: actions/checkout@v4
