--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -1,24 +1,10 @@
-name: Deploy website
+name: Deploy website and infra
 
 on:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: "Terraform operation destroy"
-        required: true
-        default: destroy
-        type: choice
-        options:
-        - destroy
-
   push:
     branches:
       - main
       - stage
-
-  pull_request:
-    branches:
-      - main
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -27,16 +13,11 @@ env:
   TF_VAR_BUCKET_NAME: ${{ secrets.TF_VAR_BUCKET_NAME }}
   TF_VAR_DYNAMODB_TABLE: ${{ secrets.TF_VAR_DYNAMODB_TABLE }}
   TF_VAR_BUCKET_KEY: ${{ secrets.TF_VAR_BUCKET_KEY }}
-  AWS_SSH_KEY_PRIVATE: ${{ secrets.AWS_SSH_KEY_PRIVATE }}
-  AWS_SSH_KEY_PUBLIC: ${{ secrets.AWS_SSH_KEY_PUBLIC }}
 
 jobs:
   terraform:
     name: Deploy infrastructure
     runs-on: ubuntu-latest
-    outputs:
-      SERVER_PUBLIC_IP: ${{ steps.set-ip.outputs.instance_public_ip}}
-      SSH_PRVIVATE: ${{ steps.set-ssh-private.outputs.ssh_private }}
 
     needs: website
     steps:
@@ -70,21 +51,6 @@ jobs:
         if: steps.plan.outcome == 'success'
         working-directory: ./terraform
 
-      - name: Set output IP
-        id: set-ip
-        run: |
-          echo "::set-output name=instance_public_ip::$(terraform output instance_public_ip)"
-
-      - name: Set output SSH PRIVATE
-        id: set-ssh-private
-        run: |
-          echo "::set-output name=ssh_private::$(terraform output ssh_private)"
-
-      - name: Terraform destroy
-        id: destroy
-        run: terraform destroy -auto-approve
-        if: steps.apply.outcome == 'success' 
-
   website:
     name: Deploy application
     runs-on: ubuntu-latest
@@ -92,12 +58,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set ip env variable
-        run: echo SERVER_PUBLIC_IP=${{ needs.terraform.outputs.SERVER_PUBLIC_IP }} >> $GITHUB_ENV
-
-      - name: Set ssh_private env variable
-        run: echo SSH_PRIVATE=${{ needs.terraform.outputs.SSH_PRVIVATE }} >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
